--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <html>
     <head>
-        <link href="style.css" type="text/css" rel="stylesheet">
+        <tittle> My  first page</tittle>
+    <meta keywords="Malla reddy | MRECW"> </meta>
     </head>
     <body>
-         <div class="container">
-            <div class="header"><h1>WELCOME TO MRECW</h1></div>
-            <div id="menubar">
-                <li><a href="#">Home</li>
-                <li><a href="#">About</li>
-                <li><a href="#">Contact</li>
-            </div>
-            <div class="maincontent"></div>
-            <div class="footer"></div>
-         </div>   
+        <h1>Welcome to MRECW</h1><br/><br/>
+        <a href="login.html">Login</a><br/><br/>
+        <a href="register.html">Sign Up</a><br/><br/>
+        <a href="contact.html">Contact</a>
+
+        <br/><br/>
+        <img src="3189180.webp" width="200" height="200"
+        <h2>Click below <b><i><u>button</i></u></b>enter</h2><br/><br/>
+        <p> display paragraph in the same format</p>
+        <pre>11,gugan st
+hyderabad
+564354
+     
+        </pre>
+        <button>Click</button>
     </body>
 </html>
+
+
+<ol>
+    <h1>PG</h1>
+    <h2>UG</h2>
+</ol>
+
+
+<ul>
+    <h1>PG</h1>
+    <h2>UG</h2>
+</ul>
