--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
 <html>
-    <head>
-        <tittle> My  first page</tittle>
-    <meta keywords="Malla reddy | MRECW"> </meta>
-    </head>
     <body>
-        <h1>Welcome to MRECW</h1><br/><br/>
-        <a href="login.html">Login</a><br/><br/>
-        <a href="register.html">Sign Up</a><br/><br/>
-        <a href="contact.html">Contact</a>
-
-        <br/><br/>
-        <img src="3189180.webp" width="200" height="200"
-        <h2>Click below <b><i><u>button</i></u></b>enter</h2><br/><br/>
-        <p> display paragraph in the same format</p>
-        <pre>11,gugan st
-hyderabad
-564354
-     
-        </pre>
-        <button>Click</button>
+        <script>
+            let a = 10;
+            const pi =  3.14 
+            console.log(a); // for view to developers (or) users
+            a = 15;
+            console.log(a);
+            console.log(pi);
+        </script>
     </body>
 </html>
-
-
-<ol>
-    <h1>PG</h1>
-    <h2>UG</h2>
-</ol>
-
-
-<ul>
-    <h1>PG</h1>
-    <h2>UG</h2>
-</ul>
