--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <html>
+    <head>
+
+
+    </head>
     <body>
+        <h1>Chat App</h1>
+        <input type="text" id="ques" placeholder="Enter Query">
+        <button onclick="askQuestion()">Send</button>
+        <div id="conversation"></div>
         <script>
-            let a = 10;
-            const pi =  3.14 
-            console.log(a); // for view to developers (or) users
-            a = 15;
-            console.log(a);
-            console.log(pi);
+            function askQuestion(){
+                let userInput=document.getElementById("ques").value;
+                let chatconv=document.getElementById("conversation");
+                chatconv.innerHTML+=`<h5>you:${userInput}`;
+                fetch(`/getmessage?ques=${userInput}`)
+                .then(response=>response.text())
+                .then(data=>{
+                    chatconv.innerHTML+=`<h5>bot:${data}`;
+                })
+                document.getElementById('ques').value="";
+            }
         </script>
     </body>
 </html>
